--- a/Twitter.UnitTests/Twitter.UnitTests.csproj
+++ b/Twitter.UnitTests/Twitter.UnitTests.csproj
@@ -12,5 +12,9 @@
     <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
     <PackageReference Include="coverlet.collector" Version="3.1.0" />
   </ItemGroup>
+  
+  <ItemGroup>
+     <ProjectReference Include="..\Twitter\Twitter.csproj" />
+   </ItemGroup>
 
 </Project>
